k8s/base/irssi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: irssi-mosh
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: irssi-mosh
  template:
    metadata:
      labels:
        app: irssi-mosh
    spec:
      imagePullSecrets:
        - name: ghcr-io-cred
      containers:
        - name: irssi-mosh
          image: ghcr.io/mfreeman451/irc-k8s:v0.0.25
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - name: ssh
              containerPort: 22
              protocol: TCP
            - name: mosh-start
              containerPort: 60000
              protocol: UDP
            - name: mosh-end
              containerPort: 61000
              protocol: UDP
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - ps aux | grep sshd | grep -v grep
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            tcpSocket:
              port: 22
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - mountPath: /home/m/.irssi
              name: irssi-config
            - mountPath: /home/m/.ssh
              name: ssh-keys
          securityContext:
            privileged: true
      volumes:
        - name: irssi-config
          persistentVolumeClaim:
            claimName: irssi-config-pvc
        - name: ssh-keys
          persistentVolumeClaim:
            claimName: ssh-keys-pvc
