k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: irssi-mosh
  namespace: default
  annotations:
    metallb.universe.tf/address-pool: k3s-pool
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  type: LoadBalancer
  ports:
    - name: ssh
      port: 2222
      targetPort: 22
      protocol: TCP
    - name: mosh
      port: 60000
      protocol: UDP
      targetPort: 60000
    - name: mosh-end
      port: 61000
      protocol: UDP
      targetPort: 61000
  selector:
    app: irssi-mosh
