k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: irssi-mosh-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "threadr-issuer"
    external-dns.alpha.kubernetes.io/hostname: "irc.slowburnin.net"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - irc.slowburnin.net
      secretName: irc-slowburnin-tls
  rules:
    - host: irc.slowburnin.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: irssi-mosh
                port:
                  number: 2222
